# roadmap-explorer

./: .gitignore  README.md  explorer.rviz
.github/workflows/: build_humble.yml  build_jazzy.yml  build_kilted.yml
roadmap_explorer/: CMakeLists.txt  CMakeLists_backup.txt  core_plugins_description.xml  frontier_planner_plugins.xml  frontier_search_plugins.xml  package.xml
roadmap_explorer/comparision_scripts/: exploration_accuracy.cpp  exploration_path_followed.cpp  exploration_path_followed_tf.cpp
roadmap_explorer/include/roadmap_explorer/: CostAssigner.hpp  CostCalculator.hpp  ExplorationBT.hpp  ExplorationServer.hpp  Frontier.hpp  FrontierSearch.hpp  FrontierSearchAllCells.hpp  FullPathOptimizer.hpp  Helpers.hpp  Nav2Interface.hpp  Parameters.hpp  SensorSimulator.hpp
roadmap_explorer/include/roadmap_explorer/bt_plugins/: BTContext.hpp  BaseBTPlugin.hpp  BlacklistGoalPlugin.hpp  CleanupRoadmapPlugin.hpp  LogIterationPlugin.hpp  OptimizeFullPathPlugin.hpp  ProcessFrontierCostsPlugin.hpp  SearchForFrontiersPlugin.hpp  SendNav2GoalPlugin.hpp  UpdateBoundaryPlugin.hpp  UpdateRoadmapPlugin.hpp  core_plugins.hpp  interface_pluginlib.hpp
roadmap_explorer/include/roadmap_explorer/controllers/: initialization_controller.hpp  recovery_controller.hpp
roadmap_explorer/include/roadmap_explorer/frontier_search/: BaseFrontierSearch.hpp  PluginBFSearch.hpp  interface_pluginlib.hpp
roadmap_explorer/include/roadmap_explorer/information_gain/: BaseInformationGain.hpp  CountBasedGain.hpp
roadmap_explorer/include/roadmap_explorer/nav2_plugins/: roadmap_planner_plugin.hpp
roadmap_explorer/include/roadmap_explorer/planners/: Astar.hpp  BasePlanner.hpp  EuclideanPlugin.hpp  FrontierRoadmap.hpp  FrontierRoadmapPlugin.hpp  NavFn.hpp  NavFnPlugin.hpp  RandomDistancePlugin.hpp  ThetaStar.hpp  astar.hpp  theta_star.hpp
roadmap_explorer/include/roadmap_explorer/util/: EventLogger.hpp  GeneralUtils.hpp  GeometryUtils.hpp  Logger.hpp  RosVisualizer.hpp
roadmap_explorer/launch/: active_slam.launch.py  exploration.launch.py  exploration_data.launch.py  exploration_server.launch.py  tb3_exploration.launch.py
roadmap_explorer/params/: exploration.yaml  exploration_params.yaml  tb3_exploration_params.yaml
roadmap_explorer/rviz/: exploration.rviz
roadmap_explorer/src/: CostAssigner.cpp  CostCalculator.cpp  ExplorationBT.cpp  ExplorationServer.cpp  Frontier.cpp  FrontierSearch.cpp  FrontierSearchAllCells.cpp  FullPathOptimizer.cpp  Helpers.cpp  Nav2Interface.cpp  Parameters.cpp  SensorSimulator.cpp  main.cpp
roadmap_explorer/src/bt_plugins/: BlacklistGoalPlugin.cpp  CleanupRoadmapPlugin.cpp  LogIterationPlugin.cpp  OptimizeFullPathPlugin.cpp  ProcessFrontierCostsPlugin.cpp  SearchForFrontiersPlugin.cpp  SendNav2GoalPlugin.cpp  UpdateBoundaryPlugin.cpp  UpdateRoadmapPlugin.cpp  core_plugins.cpp
roadmap_explorer/src/controllers/: initialization_controller.cpp  recovery_controller.cpp
roadmap_explorer/src/frontier_search/: PluginBFSearch.cpp
roadmap_explorer/src/information_gain/: CountBasedGain.cpp
roadmap_explorer/src/nav2_plugins/: roadmap_planner_plugin.cpp
roadmap_explorer/src/planners/: Astar.cpp  EuclideanPlugin.cpp  FrontierRoadmap.cpp  FrontierRoadmapPlugin.cpp  NavFn.cpp  NavFnPlugin.cpp  RandomDistancePlugin.cpp  ThetaStar.cpp  astar.cpp  theta_star.cpp
roadmap_explorer/src/util/: EventLogger.cpp  RosVisualizer.cpp
roadmap_explorer/tests/: CMakeLists.txt  continous_fi_test.cpp  fim_viz.cpp  frontier_class.cpp  logger_test.cpp  main_fim_computation.cpp  main_fisher_information_manager.cpp  nav2_interface_main.cpp  pose_fi_test.cpp  test_astar.cpp  test_base_frontier_search.cpp  test_event_logger.cpp  test_frontier.cpp  test_general_utils.cpp  test_geometry_utils.cpp
roadmap_explorer/tests/bt_plugins/: test_base_bt_plugin.cpp  test_bt_plugin_integration.cpp  test_log_iteration_plugin.cpp
roadmap_explorer/tests/frontier_roadmap_tests/: frontier_roadmap_test.cpp  roadmap_vertices_saver.cpp
roadmap_explorer/tests/frontier_search/: CMakeLists.txt  test_base_frontier_search.cpp  test_frontier_bf_search.cpp
roadmap_explorer/tests/information_gain/: CMakeLists.txt  test_base_information_gain.cpp  test_count_based_gain.cpp
roadmap_explorer/tests/other_tests/: CMakeLists.txt  test_cost_assigner.cpp
roadmap_explorer/tests/utils/: CMakeLists.txt  test_general_utils.cpp  test_helpers.cpp  test_ros_visualizer.cpp
roadmap_explorer/xml/: exploration.xml  exploration_without_fi.xml  explore_to_pose.xml  roadmap_planner.xml
roadmap_explorer_msgs/: CMakeLists.txt  package.xml
roadmap_explorer_msgs/action/: Explore.action
roadmap_explorer_msgs/srv/: SaveMapAndRoadmap.srv
roadmap_explorer_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
roadmap_explorer_rviz_plugin/src/: panel.cpp  panel.hpp
roadmap_explorer_rviz_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
roadmap_explorer_rviz_plugins/src/: panel.cpp  panel.hpp
