<?xml version="1.0"?>
<package format="3">
  <name>roadmap_explorer_rviz_plugins</name>
  <version>1.0.0</version>
  <description>A package that contains an RViz plugins for roadmap_explorer</description>
  <maintainer email="rssuchetan@gmail.com">Suchetan Saravanan</maintainer>
  <license>Apache License 2.0</license>
  <author></author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>sensor_msgs</depend>
  <depend>roadmap_explorer_msgs</depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>ros_environment</build_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
